[package]
name = "qdl"
version = "0.1.0"
authors = ["donut <bageliq@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "^0.11.2", features = ["json", "blocking"]}
futures = "^0.3.13"
console = "^0.14.1"